--- a/package.json
+++ b/package.json
@@ -8,11 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/pickers": "^3.2.10",
     "autoprefixer": "^10.0.4",
+    "date-fns": "^2.17.0",
+    "gsap": "^3.6.0",
+    "next": "latest",
     "postcss": "^8.1.10",
+    "react": "^17.0.1",
+    "react-analogue-clock": "^0.3.2",
+    "react-dom": "^17.0.1",
+    "sass": "^1.32.6",
+    "scss": "^0.2.4",
+    "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "typescript": "^4.1.3"
   }
 }
